A/aerospike-kubernetes-operator-9iB5nRfFIrBYE/aerospike-kubernetes-operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: aerospike-operator-controller-manager-metrics-service
  namespace: 9iB5nRfFIrBYE
  labels:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
spec:
  type: ClusterIP
  selector:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: aerospike-operator-webhook-service
  namespace: 9iB5nRfFIrBYE
  labels:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
spec:
  type: ClusterIP
  selector:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-aerospike-kubernetes-operator
  namespace: 9iB5nRfFIrBYE
  labels:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: release-name-aerospike-kubernetes-operator
      chart: aerospike-kubernetes-operator
      release: release-name
  template:
    metadata:
      labels:
        app: release-name-aerospike-kubernetes-operator
        chart: aerospike-kubernetes-operator
        release: release-name
      annotations: null
    spec:
      serviceAccountName: release-name-aerospike-kubernetes-operator
      containers:
        - name: manager
          image: aerospike/aerospike-kubernetes-operator:2.0.0
          command:
            - /manager
          args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
          imagePullPolicy: IfNotPresent
          ports:
            - name: webhook-server
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
        - name: kube-rbac-proxy
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
          imagePullPolicy: IfNotPresent
          args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=10
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/aerospike-operator-serving-cert
  name: aerospike-operator-mutating-webhook-configuration
  labels:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: aerospike-operator-webhook-service
        namespace: default
        path: /mutate-asdb-aerospike-com-v1beta1-aerospikecluster
    failurePolicy: Fail
    name: maerospikecluster.kb.io
    rules:
      - apiGroups:
          - asdb.aerospike.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - aerospikeclusters
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/aerospike-operator-serving-cert
  name: aerospike-operator-validating-webhook-configuration
  labels:
    app: release-name-aerospike-kubernetes-operator
    chart: aerospike-kubernetes-operator
    release: release-name
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: aerospike-operator-webhook-service
        namespace: default
        path: /validate-asdb-aerospike-com-v1beta1-aerospikecluster
    failurePolicy: Fail
    name: vaerospikecluster.kb.io
    rules:
      - apiGroups:
          - asdb.aerospike.com
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - aerospikeclusters
    sideEffects: None
